add endpoint for adding buddy list groups
